[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-whois-rdap-server"
version = "1.0.0"
description = "Model Context Protocol Server for Whois and RDAP lookups"
authors = [{name = "MCP Server", email = "server@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "anyio>=4.0.0",
    "click>=8.1.0", 
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "structlog>=23.0.0",
]

[project.scripts]
mcp-server = "main:main"

[project.entry-points.console_scripts]
start = "replit_deploy:main"

[project.urls]
Homepage = "https://github.com/example/mcp-whois-rdap-server"
Repository = "https://github.com/example/mcp-whois-rdap-server"

[tool.setuptools]
packages = ["models", "services", "utils"]

[tool.setuptools.package-data]
"*" = ["*.py"]